--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: pySopCast 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-02-08 07:17+0100\n"
+"PO-Revision-Date: 2009-02-08 18:37+0100\n"
 "Last-Translator: flyguy97 <flyguy97@gmail.com>\n"
 "Language-Team: flyguy97 <flyguy97@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -337,4 +337,7 @@ msgstr "<big><b>频道收藏</b></big>"
 
 msgid "_Edit"
 msgstr "编辑(_E)"
+
+msgid "Properties"
+msgstr "物产"
 
