Chinese translation of properties updated. Note to non-translaters: Do not use online translation services for internationalization. Thank you Zak for pointing out the error.
git-svn-id: http://sopcast-player.googlecode.com/svn/trunk@93 70e63da4-d337-11dd-8772-d1b041bf0e37

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: pySopCast 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-02-08 18:37+0100\n"
+"PO-Revision-Date: 2009-02-09 16:52+0100\n"
 "Last-Translator: flyguy97 <flyguy97@gmail.com>\n"
 "Language-Team: flyguy97 <flyguy97@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -339,5 +339,5 @@ msgid "_Edit"
 msgstr "编辑(_E)"
 
 msgid "Properties"
-msgstr "物产"
+msgstr "属性"
 
