--- a/po/ja.po
+++ b/po/ja.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: pySopCast 0.1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-01-20 21:47+0100\n"
+"PO-Revision-Date: 2009-02-10 22:11+0100\n"
 "Last-Translator: flyguy97 <flyguy97@gmail.com>\n"
 "Language-Team: flyguy97 <flyguy97@gmail.com>\n"
 "MIME-Version: 1.0\n"
@@ -160,124 +160,176 @@ msgstr "更新の記録なし"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b></b>"
+msgstr "<b>チャンネルガイド自動更新頻繁度</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b></b>"
+msgstr "<b>言語のガイド</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b></b>"
+msgstr "<b>言語のレイアウト</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b></b>"
+msgstr "<b>ガイドURL</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b></b>"
+msgstr "<b>時間切れ</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b></b>"
+msgstr "<b>メディアプレイヤー</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr "<b></b>"
+msgstr "<b>接続</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>3 Seconds</i>"
-msgstr "<i></i>"
+msgstr "<i>3秒</i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i></i>"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Channel Guide"
-msgstr ""
+msgstr "<i>なし</i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr ""
+msgstr "クラシック（分離されたウィンドウ）"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr ""
+msgstr "命令"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr ""
+msgstr "頻度数"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr ""
+msgstr "入力TCP接続"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr ""
+msgstr "言語"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr ""
+msgstr "出力TCP接続"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr ""
+msgstr "プレイヤー"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr ""
+msgstr "接続の無変換"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr ""
+msgstr "時間切れ"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
-msgstr ""
+msgstr "URL:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr ""
+msgstr "合同(シングルウィンドウ）"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr ""
+msgstr "外部のプレイヤーを使用する"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr ""
+msgstr "終了"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr ""
+msgstr "サーバーへの接続ができません"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr ""
+msgstr "ダウンローディング"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr ""
+msgstr "接続の無変換が使用できません"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static ports unavailable, do you wish to continue using dynamic ports?"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
-msgid "<i>3 Seconds</i>"
-msgstr ""
+msgstr "接続の無変換が使用できません。他の接続を希望しますか？"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr ""
+msgstr "<i>３０秒</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr ""
+msgstr "<i>5分</i>"
 
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
-msgid "<i>Never</i>"
-msgstr ""
+msgid "Screenshot"
+msgstr "スクリーンショット"
+
+msgid "Name:"
+msgstr "名前"
+
+msgid "Format:"
+msgstr "フォーマット"
+
+msgid "Bitrate:"
+msgstr "ビットレイト"
+
+msgid "Channel Group:"
+msgstr "チャンネルガイド"
+
+msgid "Classification:"
+msgstr "分類"
+
+msgid "Description:"
+msgstr "記述"
+
+msgid "Preferences"
+msgstr "優先"
+
+msgid "Play"
+msgstr "再生"
+
+msgid "Stop"
+msgstr "停止"
+
+msgid "Always On Top"
+msgstr "スクリーンの位置（上）"
+
+msgid "Show Controls"
+msgstr "コントロールあり、なし"
+
+msgid "Chinese"
+msgstr "中国"
+
+msgid "English"
+msgstr "英語"
+
+msgid "<i>Daily</i>"
+msgstr "<i>毎日</i>"
+
+msgid "<i>Program Start</i>"
+msgstr "<i>プログラム開始</i>"
+
+msgid "<big><b>Channel Bookmark</b></big>"
+msgstr "<big><b>チャンネルブックマーク</b></big>"
+
+msgid "_Edit"
+msgstr "編集(_E)"
+
+msgid "Properties"
+msgstr "プロパティ"
+
+msgid "Bookmark"
+msgstr "ブックマーク"
+
+msgid "Show Toolbar"
+msgstr "ツールバーの表示"
+
