--- a/po/ca.po
+++ b/po/ca.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-02-11 11:55+0000\n"
-"Last-Translator: oriolsbd <oriolsbd@yahoo.es>\n"
+"PO-Revision-Date: 2009-02-26 10:49+0000\n"
+"Last-Translator: joanmunoz <Unknown>\n"
 "Language-Team: Catalan <ca@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-02-16 18:16+0000\n"
+"X-Launchpad-Export-Date: 2009-02-26 19:48+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
@@ -173,7 +173,7 @@ msgstr "Mai"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>Freqüència d'actualització de la guia de canals</b>"
+msgstr "<b>Freqüència d'actualització automàtica de la guia de canals</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
@@ -181,7 +181,7 @@ msgstr "<b>Idioma de la guia de canals</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>Disposició de la guia de canals</b>"
+msgstr "<b>Disposició de la guia de canals:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
@@ -286,7 +286,7 @@ msgstr "<i>5 minuts</i>"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i>mai</i>"
+msgstr "<i>Mai</i>"
 
 msgid "Screenshot"
 msgstr "Captura de pantalla"
@@ -322,7 +322,7 @@ msgid "Always On Top"
 msgstr "Sempre per damunt"
 
 msgid "Show Controls"
-msgstr ""
+msgstr "Mostrar Controls"
 
 msgid "Chinese"
 msgstr "Xinès"
